# cs-olympiads-student-projects

./: .gitignore  CONTRIBUTING.md  README.md  build.sh  faster_wasserstein_vgg16.py
Multilayer_JXL/: .gitignore  CMakeLists.txt  README.md  build.sh  faster_wasserstein_vgg16.py  image_converter_utils.py  jxl_layered_encoder.cc  libjxl.patch  losses.py  main.py  optimizer_values.py  requirements.txt  settings.conf  train.py
circuit/: .gitignore  CMakeLists.txt  README.md  a.out  circuit.cpp  circuit.h  config.py  convert.cpp  evaluator.cpp  run_network.py
circuit/converter/: CMakeLists.txt  Makefile  cmake_install.cmake  convert2.cpp  convert_abc.py  convert_network.cpp  converted  converter.py  converter_standard.py
circuit/data/: evaluate_network  extract.py  extract_v2.py  extractor.py  increase_info.py
circuit/evaluator/: CMakeLists.txt  converted  evaluator  evaluator.cpp  evaluator.py  evaluator_abc.py  evaluator_test.cpp
circuit/exec/: bkp  convert_network  convert_network.orig  evaluate_network  evaluate_network.orig  main.py.lprof  main_layered.py.lprof  main_layered.py.prof  plot_data.py  requirements.txt  run_network.py  run_network_1000.py  run_network_2622.py  run_network_deep.py  save_data.py  test  test.cpp  vgcore.75347  vgcore.75727
circuit/generator/: best_generator.cpp  better_best_generator.cpp  better_generator.cpp  convolution.py  (+12 more)
pitch/: main.bib  main.tex  slides.tex
plasticity/: README.md  differentdata.py  differentlearners.py  linear.py  live_bright.py  loader.py  model.py  plotter.py  presets.py  pyproject.toml  requirements.txt
(+70019 files in other folders)
